# NeuroFlow-HiDevs

./: .env.example  .secrets.baseline  README.md  _fix_encoding.py  out.txt  pyproject.toml  temp_pytest.txt
.github/workflows/: build.yml  ci.yml  quality-gate.yml
backend/: Dockerfile.prod  requirements.txt
backend/models/: pipeline.py
backend/monitoring/: metrics.py
backend/resilience/: circuit_breaker.py
backend/security/: auth.py  middleware.py  prompt_injection.py  secret_detector.py  validators.py
docs/: deployment.md  retrospective.md  runbook.md
evaluation/: generation_eval.py  improvement_log.md  quality_baseline.json  quality_final.json
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/evaluations/: page.tsx
infra/: docker-compose.prod.yml
infra/grafana/dashboards/: quality_monitor.json  system_overview.json
infra/nginx/: nginx.conf
infra/prometheus/: alerts.yml  prometheus.yml
pipelines/ingestion/: chunker.py
pipelines/retrieval/: fusion.py  retriever.py
sdk/: README.md  pyproject.toml
sdk/examples/: quickstart.py
sdk/neuroflow/: __init__.py  client.py  models.py
tests/benchmarks/: retrieval_benchmark.py  retrieval_benchmark_results.md
tests/integration/: test_pipeline.py
tests/performance/: load_test_results.json  locustfile.py
tests/unit/: test_chunker.py  test_circuit_breaker.py  test_fusion.py  test_pipeline_config.py  test_prompt_injection.py
(+2 files in other folders)
