[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuroflow-sdk"
version = "1.0.0"
description = "Python SDK for the NeuroFlow LLM Orchestration Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.0"]

[project.urls]
Repository = "https://github.com/Farbricated/NeuroFlow-HiDevs"
